--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -14,43 +14,16 @@
   font-size: 15px;
 }
 
-.AddTask{
-  border: 1px solid black;
-  padding: 10px;
-}
-
-.AddProject{
-  background-color: burlywood;
-  padding: 10px;
-}
-
-.ProjectListPage{
-  background-color: rgb(229, 149, 149);
+.profile-img{
+  width:100px;
+  height:100px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid rgb(47, 49, 47);
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
