--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -14,6 +14,8 @@
   font-size: 15px;
 }
 
+
+
 .profile-img{
   width:100px;
   height:100px;
@@ -23,6 +25,11 @@
   display: flex;
   justify-content: center;
 }
+
+body h1, h2, p{
+  color:white
+}
+
 
 .backgroundGrey{
   background: #0f0c29;  /* fallback for old browsers */
@@ -80,6 +87,10 @@ background: linear-gradient(to right, #701c7f, #701c7f); /* W3C, IE 10+/ Edge, F
   background-size: auto;
   background-repeat: no-repeat;
 }
+
+
+
+
 
 
 
