--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -25,6 +25,15 @@
   display: flex;
   justify-content: center;
 }
+.profile-imgCard{
+  width: 250px;
+  object-fit: cover;
+  height:300px;
+  border-radius: 50%;  
+  border: 2px solid rgb(47, 49, 47);
+  display: flex;
+  justify-content: center;
+}
 
 body h1, h2, p{
   color:white
@@ -32,9 +41,9 @@ body h1, h2, p{
 
 
 .backgroundGrey{
-  background: #0f0c29;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #22223b;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #22223b, #22223b, #22223b);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
@@ -45,7 +54,13 @@ background: linear-gradient(to right, #701c7f, #701c7f); /* W3C, IE 10+/ Edge, F
 
 }
 
-.centerText{
+.backgroundMiki{
+  background: #4a4e69;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69); 
+}
+
+.centerText{  
   display: flex;
   text-align: center;
   align-items: center;
