--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,23 +1,7 @@
-/*.App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  border: 1px solid black;
-  width: 700px;
-}*/
-
-.navBar {
-  background-color: #a9ec8e;
-  width: 100%;
-  font-size: 15px;
-}
 
 .EventCard{
   background-color: #505757;
 }
-
 
 
 .profile-img{
@@ -98,14 +82,42 @@ background: linear-gradient(to right, #701c7f, #701c7f); /* W3C, IE 10+/ Edge, F
 	justify-content: space-between;
 	align-items: center;
 	align-content: space-between;
+  margin: 20px;
+  border-radius: 20px;
 }
 
 .artistContainer{
-  margin-top: 50px;
-  background-image: url("https://i0.wp.com/data.whicdn.com/images/332753020/original.jpg");
-  background-size: auto;
+
+  background-image:
+  linear-gradient(rgba(59, 59, 57, 0.4), rgba(31, 83, 131, 0.973)), 
+  url("/public/artista.png");
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
 }
+
+.hostContainer{
+  background-image: linear-gradient(rgba(59, 59, 57, 0.4), rgba(31, 83, 131, 0.973)), 
+  url("/public/barman.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.eventContainer{
+  background-image:
+  linear-gradient(rgba(59, 59, 57, 0.4), rgba(31, 83, 131, 0.973)), 
+  url("/public/sofar-sounds2.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.findaGig{
+  color: rgb(216, 162, 13);
+}
+
+
 
 
 
