--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -12,7 +12,9 @@
   border: 2px solid rgb(47, 49, 47);
   display: flex;
   justify-content: center;
+  margin:10px
 }
+
 .profile-imgCard{
   width: 250px;
   object-fit: cover;
@@ -29,7 +31,7 @@ body h1, h2, h3, h4, label, p{
 
 
 .backgroundGrey{
-  background: #22223b;  /* fallback for old browsers */
+background: #22223b;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #22223b, #22223b, #22223b);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
@@ -38,14 +40,28 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
 .backgroundPink{
   background: #701c7f;  /* fallback for old browsers */
   /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #701c7f, #701c7f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #701c7f, #701c7f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
 .backgroundMiki{
   background: #4a4e69;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69); 
+  background: linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69);
+  background-image:
+  linear-gradient(rgba(59, 59, 57, 0.4), rgba(31, 83, 131, 0.973)), 
+}
+
+.backgroundEventCard{
+  background: linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69);
+  border-radius: 50px;
+}
+
+.backgroundArtistCard{
+  display: flex;
+  flex-direction: row;
+  background: linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69);
+  border-radius: 10px;
 }
 
 .centerText{  
