--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -118,7 +118,7 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
 }
 
 .musicStyleColor{
-  color: rgb(204, 204, 29)
+  color: rgb(194, 160, 7)
 }
 
 .profileArtistHeaderTitle{
@@ -126,6 +126,7 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
+  padding:10px
 }
 
 .centerText{  
