--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -34,7 +34,11 @@ body h1, h2, h3, h4,h5, label, p, li{
 background: #22223b;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #22223b, #22223b, #22223b);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
+
+  .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
+    background-color: #109648 !important;
 }
 
 
@@ -95,6 +99,10 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.profileHostHeader{
+  
 }
 
 .profileArtistButtons{
