--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -40,14 +40,16 @@ body h1, h2, h3, h4, h5, h6, label, p, li{
   color:white
 }
 
+option{
+  font-size: 10px;
+}
+
 
 .backgroundGrey{
 background: #22223b;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #22223b, #22223b, #22223b);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-
-
 
 
 .backgroundEventCard{
