--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -15,6 +15,17 @@
   margin:10px
 }
 
+.event-img{
+  width: 150px;
+  object-fit: cover;
+  height:150px;
+  border: 2px solid rgb(47, 49, 47);
+  display: flex;
+  justify-content: center;
+  margin:10px
+}
+
+
 .profile-imgSmall{
   width: 75px;
   object-fit: cover;
