--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -8,6 +8,20 @@ body {
   
 
 }
+.map-container {
+  height: 400px;
+}
+
+
+.sidebar {
+  background-color: rgba(35, 55, 75, 0.9);
+  color: #fff;
+  padding: 6px 12px;
+  font-family: monospace;
+  margin: 12px;
+  border-radius: 4px;
+  }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
