--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -3,6 +3,14 @@
   background-color: #505757;
 }
 
+.map-container {
+  height: 250px;
+  width: 90vw;
+  border-radius: 8px;
+  border: 1px solid rgb(216, 162, 13);
+  
+}
+
 
 .profile-img{
   width: 150px;
