--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -71,7 +71,7 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
 
 
 .backgroundEventCard{
-  background: linear-gradient(to right, #4a4e69, #4a4e69, #4a4e69);
+  background: linear-gradient(to right, #4a4e69, #373a4d, #353952);
 }
 
 .backgroundArtistCard{
@@ -89,9 +89,10 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
 	justify-content: space-between;
 	align-items: center;
 	align-content: space-between;
-  margin: 20px;
+  margin: 35px;
   border-radius: 10px;
 }
+
 
 .artistContainer{
   background-image:
@@ -100,6 +101,8 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  padding-bottom: 40px;
+
 }
 
 .hostContainer{
@@ -108,6 +111,8 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  padding-bottom: 40px;
+
 }
 
 
@@ -118,6 +123,8 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  padding-bottom: 40px;
+
 }
 
 .findaGig{
@@ -130,9 +137,6 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
   align-items: center;
 }
 
-.profileHostHeader{ 
-
-}
 
 .profileArtistButtons{
   display: flex;
@@ -209,7 +213,16 @@ background: linear-gradient(to right, #22223b, #22223b, #22223b); /* W3C, IE 10+
   linear-gradient(rgba(59, 59, 57, 0.4), rgba(31, 83, 131, 0.973)), 
 }
 
+.lessMargin{
+  margin: -20px
+}
 
+.margenesHomePage{
+  margin-top: 30px;
+  margin-bottom: 40px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
 
 
 
